<resources>
    <string name="app_name">Schedule</string>

    <string name="schedules">Расписания</string>

    <string name="group_name">%s (%s)</string>
    <string name="lesson_name">%s (%s)</string>
    <string name="classroom_name">%s-%s</string>
    <string name="weeks_enum">неделя: %s</string>
    <string name="teacher_text">%s (подгр. %d)</string>
    <string name="time_format">%02d:%02d</string>

    <string name="empty_day">В этот день нет занятий</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="auth">Авторизоваться</string>
    <string name="user_not_found">Пользователь не найден</string>
    <string name="input_login">Введите логин</string>
    <string name="input_password">Введите пароль</string>

    <string name="editing_title">Редактирование</string>
    <string name="adding_title">Добавление</string>
    <string name="classrooms_title">Аудитории</string>
    <string name="days_of_week_title">Дни недели</string>
    <string name="lesson_types_title">Типы занятий</string>
    <string name="teachers_title">Преподаватели</string>

    <string name="subject">Дисциплина</string>
    <string name="lesson_type">Тип занятия</string>
    <string name="classroom">Аудитория</string>
    <string name="teacher">Преподаватель</string>
    <string name="begin_time">Время начала</string>
    <string name="end_time">Время конца</string>
    <string name="day_of_week">День недели</string>
    <string name="weeks">Недели</string>
    <string name="subgroup">Подгруппа</string>
    <string name="note">Примечание</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="both">Общее</string>
    <string name="delete">Удалить</string>

    <string name="delete_alert_title">Вы действительно хотите удалить это занятие?</string>
    <string name="delete_alert_message">Отменить это действие будет невозможно</string>
    <string name="yes">Да</string>

    <string name="not_selected_text">Не выбрано</string>
    <string name="error_not_fill_fields">Не удалось применить: не все обязательные характеристики заполнены</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="rank">Ученое звание</string>
    <string name="group_not_selected">Выберите группу</string>
    <string name="input_group_number">Введите номер группы</string>
    <string name="empty_groups_list">Нет добавленных расписаний</string>
    <string name="unknown_error">Неизвестная ошибка</string>
    <string name="add_schedule_dialog_title">Добавить расписание</string>
    <string name="add">Добавить</string>
    <string name="cancel">Отмена</string>

</resources>