<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.Schedule.AppBarOverlay">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginStart="12dp"
                android:background="?attr/actionBarItemBackground"
                android:src="@drawable/ic_close"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/appBarTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:minHeight="?actionBarSize"
                android:padding="16dp"
                android:text="@string/editing_title"
                android:textAppearance="@style/TextAppearance.Widget.AppCompat.Toolbar.Title" />

            <ImageButton
                android:id="@+id/applyButton"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:layout_marginEnd="12dp"
                android:background="?attr/actionBarItemBackground"
                android:src="@drawable/ic_check"
                tools:ignore="ContentDescription" />

        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/subjectCard"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless">

                <EditText
                    android:id="@+id/subjectText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/subject"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/typeCard"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless">

                <TextView
                    android:id="@+id/typeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/lesson_type"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/classroomCard"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless">

                <TextView
                    android:id="@+id/classroomText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/classroom"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/teacherCard"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless">

                <TextView
                    android:id="@+id/teacherText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/teacher"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.cardview.widget.CardView
                    android:id="@+id/startTimeCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackgroundBorderless"
                    app:cardCornerRadius="0dp">

                    <TextView
                        android:id="@+id/startTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/begin_time"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/endTimeCard"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:foreground="?selectableItemBackgroundBorderless"
                    app:cardCornerRadius="0dp">

                    <TextView
                        android:id="@+id/endTimeText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/end_time"
                        android:padding="16dp"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/dayOfWeekCard"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless">

                <TextView
                    android:id="@+id/dayOfWeekText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/day_of_week"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/weeksCard"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <TextView
                        android:id="@+id/weeksText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/weeks"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center">

                        <CheckBox
                            android:id="@+id/week_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:padding="10dp"
                            android:text="@string/one"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/week_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:padding="10dp"
                            android:text="@string/two"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/week_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:padding="10dp"
                            android:text="@string/three"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                        <CheckBox
                            android:id="@+id/week_4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:padding="10dp"
                            android:text="@string/four"
                            android:textColor="@color/black"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/subgroupCard"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:background="@color/white">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/subgroupText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="16dp"
                        android:text="@string/subgroup"
                        android:textColor="@color/black"
                        android:textSize="18sp" />

                    <RadioGroup
                        android:id="@+id/radioSubgroup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/subgroup_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/one"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/subgroup_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="@string/two"
                            android:textSize="18sp" />

                        <RadioButton
                            android:id="@+id/subgroupBoth"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:padding="10dp"
                            android:text="@string/both"
                            android:textSize="18sp" />

                    </RadioGroup>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/noteCard"
                android:layout_width="match_parent"
                android:layout_height="58dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless">

                <EditText
                    android:id="@+id/noteText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:hint="@string/note"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:padding="16dp"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/deleteCard"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless">

                <TextView
                    android:id="@+id/deleteTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/delete"
                    android:textColor="@color/red"
                    android:textSize="18sp" />

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

</LinearLayout>